--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,7 @@ jobs:
         env:
           CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
         with:
+          debug: true
           coverageCommand: npm run coverage
           coverageLocations: |
             ${{github.workspace}}/coverage/*.lcov:lcov
