--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["**/*spec.ts", "dist", "build", "example"],
+  "exclude": ["**/*spec.ts", "dist", "build"],
   "compilerOptions": {
     "outDir": "./dist"
   }
