--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=12.15.0"
   },
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "rimraf dist .tsbuildinfo",
     "build": "tsc -p tsconfig.build.json",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --runInBand",
