--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,7 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
   release:
+    needs: build
     runs-on: ubuntu-latest
     timeout-minutes: 3
 
