--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build & Test
         run: |
           npm run build
-          npm run test
+          npm run test:cov
 
       - name: SonarCloud Scan
         if: matrix.node-version == '20.x'
