--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "prebuild": "rimraf dist .tsbuildinfo",
     "build": "tsc -p tsconfig.build.json",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest --runInBand",
-    "test:ci": "jest --runInBand",
-    "test:cov": "jest --runInBand --coverage",
-    "test:watch": "jest --runInBand --watch",
+    "test": "jest --runInBand --detectOpenHandles",
+    "test:ci": "jest --runInBand --detectOpenHandles",
+    "test:cov": "jest --runInBand --coverage --detectOpenHandles",
+    "test:watch": "jest --runInBand --watch --detectOpenHandles",
     "prepare": "husky",
     "commit": "git cz",
     "prettier": "prettier --write .",
