add canary test; fix tsconfig

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=andreacioni_nestjs-kafka-module
 sonar.organization=andreacioni
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
-sonar.coverage.exclusions=**/node_modules/**, **/example/**, **/test/**
+sonar.coverage.exclusions=**/node_modules/**, **/example/**, **/test/**, **/canary/**
