--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "prebuild": "rimraf dist .tsbuildinfo",
-    "build": "tsc -p tsconfig.build.json",
+    "build": "tsc",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --runInBand --detectOpenHandles",
     "test:ci": "jest --runInBand --detectOpenHandles",
@@ -24,7 +24,7 @@
     "type": "git",
     "url": "git+https://github.com/andreacioni/nestjs-kafka-module.git"
   },
-  "author": "Kelvin Au",
+  "author": "Andrea Cioni",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/andreacioni/nestjs-kafka-module/issues"
