--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -30,14 +30,12 @@ jobs:
           mkdir $EXAMPLE_FOLDER
           mv canary/nest-${{ matrix.nest-version }}/* $EXAMPLE_FOLDER
           cd $EXAMPLE_FOLDER
-          
-      - name: Install Dependencies
-        run: |
+
           # Install dependencies
           npm install
           
           # Install nestjs-kafka-module
           npm install nestjs-kafka-module
           
-      - name: Test    
-        run: npm test
+          # Test
+          npm test
