--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x, 18.x, 20.x]
-        nest-version: [v9]
+        nest-version: [v9, v8]
 
     steps:
       - name: Checkout Repository
