--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [16.x, 18.x, 20.x]
+        node-version: [16.x, 18.x, 20.x, 21.x, 22.x]
 
     steps:
       - name: Checkout code
@@ -39,7 +39,7 @@ jobs:
           npm run test:cov
 
       - name: SonarCloud Scan
-        if: matrix.node-version == '20.x'
+        if: matrix.node-version == '22.x'
         uses: SonarSource/sonarcloud-github-action@master
         env:
           SONAR_TOKEN: ${{ secrets. SONARCLOUD_TOKEN }}
