--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x]
+        node-version: [16.x, 18.x, 20.x, 21.x, 22.x]
         nest-version: [v9, v8, v10]
 
     steps:
