--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nestjs-kafka-module",
   "version": "2.0.4",
-  "description": "A NestJS module wrapper for node-rdkafka.",
+  "description": "A NestJS module wrapper for @confluentinc/kafka-javascript.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "engines": {
@@ -13,7 +13,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --runInBand --detectOpenHandles",
     "test:ci": "jest --runInBand --detectOpenHandles",
-    "test:cov": "jest --runInBand --coverage --detectOpenHandles",
+    "test:cov": "jest --coverage --detectOpenHandles",
     "test:watch": "jest --runInBand --watch --detectOpenHandles",
     "prepare": "husky",
     "commit": "git cz",
@@ -33,11 +33,11 @@
   "devDependencies": {
     "@commitlint/cli": "^19.0.0",
     "@commitlint/config-conventional": "19.6.0",
-    "@nestjs/common": "10.4.15",
-    "@nestjs/config": "^3.2.0",
-    "@nestjs/core": "10.4.15",
-    "@nestjs/platform-express": "10.4.15",
-    "@nestjs/testing": "10.4.15",
+    "@nestjs/common": "11.0.11",
+    "@nestjs/config": "^4.0.1",
+    "@nestjs/core": "11.0.11",
+    "@nestjs/platform-express": "11.0.11",
+    "@nestjs/testing": "11.0.11",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/git": "^10.0.1",
