--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -1,9 +1,9 @@
 name: Nightly Build
 
 on:
-  workflow_dispatch: 
+  workflow_dispatch:
   schedule:
-    - cron: '0 6 * * *'  # Executes every night at 6:00 AM UTC
+    - cron: "0 6 * * *" # Executes every night at 6:00 AM UTC
 
 jobs:
   build:
@@ -23,7 +23,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      
+
       - name: Setup a new folder and copy example file
         run: |
           EXAMPLE_FOLDER=/tmp/nest-${{ matrix.nest-version }}
@@ -33,12 +33,12 @@ jobs:
 
           # Install dependencies
           npm install
-          
+
           # Install nestjs-kafka-module
           npm install nestjs-kafka-module
 
           # Show installed dependencies
           npm ls
-          
+
           # Test
           npm test
