--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestjs-kafka-module",
-  "version": "3.0.0-beta.4",
+  "version": "3.0.0-beta.5",
   "description": "A NestJS module wrapper for @confluentinc/kafka-javascript.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -37,6 +37,12 @@
     "@confluentinc/kafka-javascript": "^1.0.0",
     "@confluentinc/schemaregistry": "^1.0.0",
     "@nestjs/terminus": "*"
+    
+  },
+  "peerDependenciesMeta": {
+    "@nestjs/terminus": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@commitlint/cli": "^19.0.0",
