--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "files": [
     "dist"
   ],
-  "main": "index.js",
-  "types": "index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "engines": {
     "node": ">=12.15.0"
   },
